[gd_scene load_steps=4 format=3 uid="uid://d3lqbjw2jmn73"]

[ext_resource type="Script" path="res://scripts/upgrade_screen.gd" id="1_30uq6"]
[ext_resource type="FontFile" uid="uid://dtflq4023lv3o" path="res://fonts/xolonium-regular.ttf" id="2_njt5u"]

[sub_resource type="FontFile" id="FontFile_qjjm0"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("2_njt5u"), ExtResource("2_njt5u")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)

[node name="upgrade_screen" type="CanvasLayer"]
script = ExtResource("1_30uq6")

[node name="UpgradeSpeed" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -176.0
offset_right = -155.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
text = "upgrade Speed"

[node name="UpgradeDamage" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -174.0
offset_right = 296.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
text = "upgrade damage"

[node name="UpgradeFireAmount" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.0
offset_top = 175.0
offset_right = 297.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
text = "upgrade fire amount"

[node name="UpgradeFireSpeed" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = 176.0
offset_right = -156.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
text = "upgrade fire speed"

[node name="cost" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 180.0
offset_top = 587.0
offset_right = 205.0
offset_bottom = 636.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontFile_qjjm0")
theme_override_font_sizes/font_size = 35
text = "15"
horizontal_alignment = 1

[node name="cost2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 586.0
offset_right = -247.0
offset_bottom = 635.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontFile_qjjm0")
theme_override_font_sizes/font_size = 35
text = "5"
horizontal_alignment = 1

[node name="cost3" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 179.0
offset_top = 234.0
offset_right = 204.0
offset_bottom = 283.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontFile_qjjm0")
theme_override_font_sizes/font_size = 35
text = "8"
horizontal_alignment = 1

[node name="cost4" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -285.0
offset_top = 230.0
offset_right = -251.0
offset_bottom = 279.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontFile_qjjm0")
theme_override_font_sizes/font_size = 35
text = "5"
horizontal_alignment = 1

[connection signal="pressed" from="UpgradeSpeed" to="." method="_on_upgrade_speed_pressed"]
[connection signal="pressed" from="UpgradeDamage" to="." method="_on_upgrade_damage_pressed"]
[connection signal="pressed" from="UpgradeFireAmount" to="." method="_on_upgrade_fire_amount_pressed"]
[connection signal="pressed" from="UpgradeFireSpeed" to="." method="_on_upgrade_fire_speed_pressed"]
